--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.1",
   "description": "Continous integration of BioJS components into Galay",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "biojs",
     "galaxy"
@@ -13,11 +10,16 @@
   "bin":{
     "biojs-galaxy": "./index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/biojs/biojs-galaxy"
+  },
+  "bugs": {
+    "url": "https://github.com/biojs/biojs-galaxy/issues"
+  },
+  "homepage": "https://github.com/biojs/biojs-galaxy",
   "author": "greenify",
   "license": "GPLv3",
-  "devDependencies": {
-    "npm-registry": "^0.1.11"
-  },
   "dependencies": {
     "biojs-events": "0.0.4",
     "bluebird": "^2.3.11",
@@ -30,13 +32,12 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "inst": "^0.1.4",
-    "lodash": "^2.4.1",
     "mustache": "^0.8.2",
-    "npmi": "^0.1.1",
     "request-promise": "^0.3.2",
     "stream-to-promise": "^1.0.4",
     "tmp": "0.0.24",
     "to-slug": "0.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "npm-registry": "^0.1.11"
   }
 }
