--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "biojs-galaxy",
+  "name": "biojs2galaxy",
   "version": "0.0.3",
   "description": "Continous integration of BioJS components into Galay",
   "main": "index.js",
