--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "biojs2galaxy",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Continous integration of BioJS components into Galay",
   "main": "index.js",
   "keywords": [
@@ -23,8 +23,9 @@
   "dependencies": {
     "biojs-events": "0.0.4",
     "bluebird": "^2.3.11",
-    "browserify": "^6.3.2",
+    "browserify": "^8.1.3",
     "child-process-promise": "^1.0.0",
+    "commander": "^2.6.0",
     "fs-extra": "^0.12.0",
     "fs-promise": "^0.3.0",
     "gulp": "^3.8.10",
@@ -32,6 +33,7 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "inst": "^0.1.4",
+    "minilog": "^2.0.6",
     "mustache": "^0.8.2",
     "npm-registry": "^0.1.11",
     "request-promise": "^0.3.2",
