--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "galaxy"
   ],
   "bin": {
-    "biojs2galaxy": "./index.js"
+    "biojs2galaxy": "./biojs2galaxy.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "bluebird": "^2.3.11",
     "browserify": "^8.1.3",
     "child-process-promise": "^1.0.0",
-    "commander": "^2.6.0",
+    "commander": "^2.8.1",
     "fs-extra": "^0.12.0",
     "fs-promise": "^0.3.0",
     "gulp": "^3.8.10",
@@ -33,6 +33,7 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "inst": "^0.1.4",
+    "lodash": "^3.10.0",
     "minilog": "^2.0.6",
     "mustache": "^0.8.2",
     "npm-registry": "^0.1.11",
